TAG: littriageload-6-0-17-17
TAG: littriageload-6-0-17-16
TAG: littriageload-6-0-17-15
TAG: littriageload-6-0-17-14
DATE: 11/30/2021
STAFF: lec
wts2-687/archiving files for PRO auto-triagesh fix
#       processSecondary.sh
#       secondary.py
#       PRO_extracted_text.sql
#       PRO_ignored_text.sql
#       secondaryReports.csh

TAG: littriageload-6-0-17-13
DATE: 09/22/2021
STAFF: lec
wts2-702/littriageload: littriage_NLML_refresh fix

TAG: littriageload-6-0-17-12
DATE: 09/14/2021
STAFF: lec
wts2-685/Secondary triage script for auto-Routing for Tumor needs adjusting

TAG: littriageload-6-0-17-11
DATE: 07/26/2021
STAFF: lec
littriageload.py/do not attach to diagFile; abstract may contain 'fail' which gets reported by Dave's checker

TAG: littriageload-6-0-17-10
DATE: 06/10/2021
STAFF: lec
wts2-649/littriageload/littriage_noctua/littriage_goa/J:# & Relevance

TAG: littriageload-6-0-17-9
TAG: littriageload-6-0-17-8
DATE: 06/07/2021
STAFF: lec
post build 39
1. missing : New Failed PDF's in Needs_Review folder: 0
2. Literature Triage Level 0 Errors : duplicate PDF file name 

TAG: littriageload-6-0-17-7
DATE: 06/03/2021
STAFF: lec
b39-509/Lit Triage load issue/findNLMrefresh.sh

TAG: littriageload-6-0-17-6
DATE: 05/25/2021
STAFF: lec
b39-509/Lit Triage load issue/findNLMrefresh.sh

TAG: littriageload-6-0-17-5
TAG: littriageload-6-0-17-4
DATE: 05/18/2021
STAFF: lec
b39-509/Lit Triage load issue/improve execution time
fix bug
secondary: change from 30 to 50

TAG: littriageload-6-0-17-3
DATE: 05/17/2021, 05/18/2021
STAFF: lec
b39-509/Lit Triage load issue/improve execution time
secondary/GXD/turn back on: and s.isCurrent = 1

TAG: littriageload-6-0-17-2
DATE: 05/14/2021
STAFF: lec
b39-509/Lit Triage load issue/improve execution time

TAG: littriageload-6-0-17-1
DATE: 05/11/2021
STAFF: lec
TR13307/Adding PMIDS from Noctua load into MGI
TR13349/Build 39/Relevance/Secondary Triage
TR13288/Lit triage load - Handle text extraction problems better

TAG: littriageload-6-0-16-7